# recursive-resolver

./: Cargo.toml  README.md  TODO.md  UNDERSTANDING_HICKORY.md
.github/workflows/: rust.yml
src/: backend.rs  cache.rs  daemon.rs  fake_backend.rs  lookup.rs  macros.rs  main.rs  resolver.rs  selector.rs  target.rs
