[package]
name = "recursive-resolver"
version = "0.1.0"
edition = "2021"

[dependencies]
hickory-proto = "0.24.1"

tokio = { version = "1.39.2", features = ["full"]}
futures-util = "0.3.30"
async-trait = "0.1.81"

anyhow = "1.0.86"
rand = "0.8.5"

tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"

clap = { version = "4.5.11", features = ["derive"] }

[dev-dependencies]
ctor = "0.2.8"
