[package]
name = "recursive-resolver"
version = "0.1.1"
edition = "2021"

[dependencies]
hickory-proto = "0.24.1"

# update this once the opentelemetry_sdk updates its dependency
tokio = { version = "1.38.1", features = ["full"]}
futures-util = "0.3.30"
async-trait = "0.1.81"

anyhow = "1.0.86"
rand = "0.8.5"

tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = "0.3.18"
tracing-opentelemetry = "0.26.0"
opentelemetry-otlp = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio"] }
opentelemetry = "0.25.0"

clap = { version = "4.5.11", features = ["derive"] }
thiserror = "1.0.63"
async-recursion = "1.1.1"
opentelemetry-semantic-conventions = "0.25.0"
lru = "0.12.5"
lazy_static = "1.5.0"

[dev-dependencies]
ctor = "0.2.8"
